# Specht2CLI

./: .gitignore  .travis.yml  CMakeLists.txt  Pipfile  appveyor.yml  conanfile.txt
src/: main.c
